--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
       </div>
       <footer class="footer">
-          <center><div class="col align-self-center">Ce site web est opensource, il a été créer par Cyril TAVIAN pour le site web nexao.net - 2017-2018</div></center>>
+          <center><div class="col align-self-center">Ce site web est opensource <a href="https://github.com/nexaooo/nexao.net.git">Git Nexaooo</a>, il a été créer par Cyril TAVIAN pour le site web nexao.net - 2017-2018</div></center>>
       </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
