--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
           </div>
         </div>
       </div>
-       <footer><p class="text-center">Ce site web est opensource - <a href=https://github.com/nexaooo/nexao.net>Nexao.net</a> - Créer par Cyril TAVIAN - 2017-2018 </p></footer>
+    </br>
+  </br>
+</br>
+</br>
+    <footer><p class="text-center">Ce site web est opensource - <a href="https://github.com/nexaooo/nexao.net">Nexao.net</a> - Créé par Cyril TAVIAN - 2017-2018 </p></footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
